samples/_failures_safe/1761483450_570ec6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e45ee8d.c: In function ‘main’:
./samples/SAFE/__tmp_2e45ee8d.c:164:9: error: expected declaration or statement at end of input
  164 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_2e45ee8d.c:164:9: error: expected declaration or statement at end of input
